# Graph-Embedding

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.copy
citeseer/: citeseer - Copy.cites
cora/: cora - Copy.embedding
ge/: BiasedRandomWalk.py  DeepWalk.py  Node2Vec.py  README.md  RandomWalkEmbedding.py  deepWalk.py  main.py  main_Walk.py  node2vec.py  plotting.py  skipgram.py  struc2vec.py  utils.py
ge/temp_struc2vec/: average_weight  degreelist.pkl  gamma.pkl  layers_accept.pkl  layers_adj.pkl  layers_alias.pkl  norm_weights_distance-layer-0.pkl  norm_weights_distance-layer-1.pkl  norm_weights_distance-layer-2.pkl  structural_dist.pkl
src/cora/: cora - Copy.cites  cora - Copy.embedding
src/data/: cora - Copy.cites.embedding  cora - Copy.embedding  cora.embedding
src/dgllge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ge/: Classifiers.py  __init__.py  deepWalk.py  main.py  main_ge.py  main_trainClf.py  node2vec.py  randomWalkEmbedding.py  skipgram.py  struc2vec.py  utils.py
src/ge/dgllge.egg-info/: PKG-INFO  SOURCES.txt
src/ge/temp_struc2vec/: average_weight  gamma.pkl  layers_adj.pkl  layers_alias.pkl  norm_weights_distance-layer-0.pkl  norm_weights_distance-layer-1.pkl  norm_weights_distance-layer-2.pkl  structural_dist.pkl
