# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DGLL-GraphEmbedding"
version = "1.0.0"
description = "Read the latest Real Python tutorials"
readme = "README.md"
authors = [{ name = "Real Python", email = "info@realpython.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
]
keywords = ["graph embedding", "embedding", "ge"]
dependencies = [
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "python-dateutil>=2.8.2",
    "pytz>=2022.1",
    "six>=1.16.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/sahibzada-irfanullah/Graph-Embedding"

[project.scripts]
realpython = "reader.__main__:main"
[tool.bumpver]
current_version = "1.5.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"setup.cfg" = [
    'version = {version}',
]
"src/__init__.py" = ["{version}"]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

