# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgllge"
version = "1.0.0"
description = "Read the latest Real Python tutorials"
readme = "README.md"
authors = [{ name = "Irfan Ullah", email = "irfan@khu.ac.kr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
]
keywords = ["graph embedding", "embedding", "ge"]

dependencies = [
    "torch==1.11.0",
    "torchvision==0.12.0",
    "pandas==1.3.5",
    "scikit-learn==1.0.2",
    "scipy==1.7.3",
    "matplotlib==3.1.0",
    "networkx==2.6.3",
    "numpy==1.21.6",
    "gensim==4.1.2",
    "fastdtw==0.3.2",
    "certifi==2019.6.16",
    "charset-normalizer==2.0.12",
    "click==8.1.3",
    "colorama==0.4.4",
    "cycler==0.10.0",
    "Cython==0.29.23",
    "idna==3.3",
    "importlib-metadata==4.11.4",
    "joblib==1.1.0",
    "kiwisolver==1.4.3",
    "packaging==21.0",
    "pep517==0.12.0",
    "Pillow==9.1.1",
    "pyparsing==3.0.9",
    "python-dateutil==2.8.2",
    "pytz==2022.1",
    "requests==2.28.0",
    "six==1.16.0",
    "smart-open==6.0.0",
    "threadpoolctl==3.1.0",
    "tomli==2.0.1",
    "typing_extensions==4.2.0",
    "urllib3==1.26.9",
    "zipp==3.8.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/sahibzada-irfanullah/Graph-Embedding"

[project.scripts]
ge = "ge.main:main"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/ge/__init__.py" = ["{version}"]

"setup.cfg" = [
    'version = {version}',
]

"README.md" = [
    "{version}",
    "{pep440_version}",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module                 = "dgllge"
ignore_missing_imports = true